Fix issue with hover box not showing up

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,6 @@
 #contentstack-highlight {
     position: absolute;
     border: solid 2px #E54A4E;
-    /*background-color: rgba(0, 0, 0, 0.5);*/
     z-index: 1;
 }
 
@@ -64,11 +63,11 @@
     opacity: 0;
     position: absolute;
     z-index: 10;
-    width: 34%;
+    width: 75%;
     float: left;
     top: 0;
     left: 0;
-    padding: 0 34%;
+    padding: 0 15%;
 }
 
 .error {
